--- a/src/index.css
+++ b/src/index.css
@@ -7,28 +7,25 @@
   --primary-muted: #69db7c40;
   --secondary: #ffe380;
   --secondary-muted: #ffe38040;
-
   --dark: #00000040;
   --darker: #00000080;
   --light: #ffffff40;
-  --lighter: #ffffff80;
-}
+  --lighter: #ffffff80; }
 
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 html {
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
   scroll-behavior: smooth;
   font-family: 'Outfit', serif;
-  background-color: var(--background);
-}
+  background-color: var(--background); }
 
 body {
   color: var(--text);
-  font-size: 1.4rem;
-}
+  font-size: 1.4rem; }
+
+/*# sourceMappingURL=index.css.map */
